Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.7.0
-
Fix Version/s: 5.9.2
-
Component/s: Location: Maps/Navigation
-
Labels:None
-
Environment:Ubuntu 14.04, Qt 5.7.0
Description
The Example Usage section for Plugin includes the code:
Plugin { id: plugin preferred: ["here", "osm"] required: Plugin.AnyMappingFeatures | Plugin.AnyGeocodingFeatures }
However, using this QML...
Map { plugin: Plugin { preferred: ["here", "osm"] required: Plugin.AnyMappingFeatures } }
...produces the error:
qrc:/navigation/Navigation.qml:124 Invalid property assignment: "required" is a read-only property