Fix for Plugin.required being readonly

The documentation clearly states that this property should be
writable but it's not.

Task-number: QTBUG-57419
Change-Id: I1dc93d45ddf52f2e1eee9572f153f4f19916ca2a
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>